Реализована функциональность - События, Запросы, Подборки

--- a/evm/src/main/resources/application.properties
+++ b/evm/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewmdb
 spring.datasource.username=ewmuser
 spring.datasource.password=ewmuser
-#stat-server.url=${STATISTIC_SERVER_URL}
+stats-server.url=http://localhost:9090
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=validate
 
